# FunctionTimer

./: CMakeLists.txt  FunctionTimer.h  README.md  example.cpp  main.cpp  main_verbose.cpp
